# iteration_1

./: .dockerignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
src/: asgi.py
src/iteration_1/: aiohttp_funcs.py  config.py  entities.py  fastapi_endpoints.py  requests_funcs.py  structlog_config.py
tests/: test_fastapi_endpoints.py
