[tool.poetry]
name = "iteration-1"
version = "0.1.0"
description = ""
authors = ["Dmitrii Avdeev <dmavdeev.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "iteration_1", from='src'}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
aiohttp = "^3.8.3"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.0"
black = "^23.1.0"
aioresponses = "^0.7.4"
httpx = "^0.23.3"
trio = "^0.22.0"

[build-system]
requires = ["poetry-core==1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "asgi:start"
